# python-minimal

./: pyproject.toml
src/: main.py
